Fixes to make the addr_map example pass the unit tests

--- a/peakrdl/python/templates/addrmap.py.jinja
+++ b/peakrdl/python/templates/addrmap.py.jinja
@@ -36,7 +36,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(FieldWriteOnly):
     def enum_cls(cls):
         return cls.__enum_cls
 
-    {%- if node.is_sw_readable %}
+        {%- if node.is_sw_readable %}
     @classmethod
     def __reverse_enum_value_lookup(cls, int_value: int) -> {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent)}}_enumcls:
 
@@ -49,16 +49,16 @@ class {{get_fully_qualified_type_name(node)}}_cls(FieldWriteOnly):
     def read(self) -> {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent)}}_enumcls:
         int_value = super().read()
         return self.__reverse_enum_value_lookup(int_value)
-    {% endif %}
+        {% endif %}
 
-    {%- if node.is_sw_writable %}
+        {%- if node.is_sw_writable %}
     def write(self, value : {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent)}}_enumcls):
 
         if not isinstance(value, self.enum_cls):
             raise TypeError('value must be an {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent)}}_enumcls but got %s' % type(value))
 
         super().write(value.value)
-    {% endif %}
+        {% endif %}
     {% endif %}
 
 {%- endmacro -%}
@@ -80,9 +80,9 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
                  read_callback: read_callback_type,
                  write_callback: write_callback_type,
                  logger_handle,
-                 base_address={{top_node.absolute_address}},
-                 address_width=32,
-                 data_width=32):
+                 base_address,
+                 address_width,
+                 data_width):
 
         super().__init__(read_callback=read_callback,
                          write_callback=write_callback,
@@ -126,7 +126,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
         self.__{{get_inst_name(child_node)}} = {{get_fully_qualified_type_name(child_node)}}_cls(parent_register=self,
                                                                                  lsb={{child_node.lsb}},
                                                                                  msb={{child_node.msb}},
-                                                                                 logger_handle=logger_handle+'{{get_inst_name(child_node)}}')
+                                                                                 logger_handle=logger_handle+'.{{get_inst_name(child_node)}}')
             {%- endif -%}
         {%- endfor %}
 
@@ -150,7 +150,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
                                                                    write_callback=write_callback,
                                                                    base_address=base_address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                    address_width=self.address_width,data_width=self.data_width,
-                                                                   logger_handle=logger_handle+'{{get_inst_name(node)}}[{{node_instance_index}}]')
+                                                                   logger_handle=logger_handle+'.{{get_inst_name(node)}}[{{node_instance_index}}]')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
             {%- elif node.has_sw_readable and not node.has_sw_writable %}
@@ -159,7 +159,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
                                                                    base_address=base_address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                    address_width=self.address_width,
                                                                    data_width=self.data_width,
-                                                                   logger_handle=logger_handle+'{{get_inst_name(node)}}[{{node_instance_index}}]')
+                                                                   logger_handle=logger_handle+'.{{get_inst_name(node)}}[{{node_instance_index}}]')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
             {%- elif not node.has_sw_readable and node.has_sw_writable %}
@@ -168,7 +168,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
                                                                    base_address=base_address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                    address_width=self.address_width,
                                                                    data_width=self.data_width,
-                                                                   logger_handle=logger_handle+'{{get_inst_name(node)}}[{{node_instance_index}}]')
+                                                                   logger_handle=logger_handle+'.{{get_inst_name(node)}}[{{node_instance_index}}]')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
             {%- endif %}
@@ -179,22 +179,22 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
                                                                  base_address=base_address+{{node.address_offset}},
                                                                  address_width=self.address_width,
                                                                  data_width=self.data_width,
-                                                                 logger_handle=logger_handle+'{{get_inst_name(node)}}')
+                                                                 logger_handle=logger_handle+'.{{get_inst_name(node)}}')
             {%- elif node.has_sw_readable and not node.has_sw_writable %}
     self.__{{get_inst_name(node)}} = {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
                                                                  base_address=base_address+{{node.address_offset}},
                                                                  address_width=self.address_width,
                                                                  data_width=self.data_width,
-                                                                 logger_handle=logger_handle+'{{get_inst_name(node)}}')
+                                                                 logger_handle=logger_handle+'.{{get_inst_name(node)}}')
             {%- elif not node.has_sw_readable and node.has_sw_writable %}
     self.__{{get_inst_name(node)}} = {{get_fully_qualified_type_name(node)}}_cls(write_callback=write_callback,
                                                                                  base_address=base_address+{{node.address_offset}},
                                                                                  address_width=self.address_width,
                                                                                  data_width=self.data_width,
-                                                                                 logger_handle=logger_handle+'{{get_inst_name(node)}}')
+                                                                                 logger_handle=logger_handle+'.{{get_inst_name(node)}}')
             {%- endif %}
         {%- endif %}
-    {%- elif isinstance(node, systemrdlRegfileNode) %}
+    {%- elif isinstance(node, systemrdlRegfileNode) or isinstance(node, systemrdlAddrmapNode) %}
         {%- if node.is_array %}
     self.__{{get_inst_name(node)}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
                                        {{get_fully_qualified_type_name(node)}}_cls(read_callback=read_callback,
@@ -202,7 +202,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
                                                                                    base_address=base_address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                                    address_width=self.address_width,
                                                                                    data_width=self.data_width,
-                                                                                   logger_handle=logger_handle+'{{get_inst_name(node)}}[{{node_instance_index}}]')
+                                                                                   logger_handle=logger_handle+'.{{get_inst_name(node)}}[{{node_instance_index}}]')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
         {%- else -%}
@@ -211,7 +211,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
                                                                                  base_address=base_address+{{node.address_offset}},
                                                                                  address_width=self.address_width,
                                                                                  data_width=self.data_width,
-                                                                                 logger_handle=logger_handle+'{{get_inst_name(node)}}')
+                                                                                 logger_handle=logger_handle+'.{{get_inst_name(node)}}')
         {%- endif %}
     {%- endif %}
 {%- endmacro %}
@@ -224,8 +224,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegFile):
     def __init__(self,
                  read_callback: read_callback_type,
                  write_callback: write_callback_type,
-                 logger_handle,
-                 base_address={{top_node.absolute_address}},
+                 logger_handle:str,
+                 base_address:int,
                  address_width=32,
                  data_width=32):
 
@@ -251,31 +251,32 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegFile):
 {%- endmacro %}
 
 {%- macro addrmap_class(node) %}
-class {{get_fully_qualified_type_name(top_node)}}_cls(AddressMap):
+class {{get_fully_qualified_type_name(node)}}_cls(AddressMap):
 
-    __slots__ = [{%- for node in top_node.children(unroll=False) -%}{%- if isinstance(node, systemrdlRegNode) or isinstance(node, systemrdlRegfileNode)  -%}'__{{get_inst_name(node)}}'{% if not loop.last %}, {% endif %}{% endif %}{%- endfor %}]
+    __slots__ = [{%- for child_node in node.children(unroll=False) -%}{%- if isinstance(child_node, systemrdlRegNode) or isinstance(child_node, systemrdlRegfileNode) or isinstance(child_node, systemrdlAddrmapNode) -%}'__{{get_inst_name(child_node)}}'{% if not loop.last %}, {% endif %}{% endif %}{%- endfor %}]
 
     def __init__(self,
                  read_callback: read_callback_type,
                  write_callback: write_callback_type,
-                 base_address={{top_node.absolute_address}}):
-
-        logger_handle = 'reg_model.{{top_node.get_path()}}'
+                 base_address:int {%- if node == top_node -%}={{top_node.absolute_address}}{%- endif -%},
+                 logger_handle:str {%- if node == top_node -%}='reg_model.{{top_node.get_path()}}'{%- endif -%},
+                 address_width=32,
+                 data_width=32):
 
         super().__init__(base_address=base_address,
-                         address_width=32,
-                         data_width=32,
+                         address_width=address_width,
+                         data_width=data_width,
                          logger_handle=logger_handle)
 
-        {% for node in top_node.children(unroll=False) -%}
-            {{ regfile_or_addr_instance(node) | indent }}
+        {% for child_node in node.children(unroll=False) -%}
+            {{ regfile_or_addr_instance(child_node) | indent }}
         {% endfor %}
 
-        {%- for node in top_node.children(unroll=False) -%}
-            {%- if isinstance(node, systemrdlRegNode) or isinstance(node, systemrdlRegfileNode) %}
+        {%- for child_node in node.children(unroll=False) -%}
+            {%- if isinstance(child_node, systemrdlRegNode) or isinstance(child_node, systemrdlRegfileNode) or isinstance(child_node, systemrdlAddrmapNode) %}
     @property
-    def {{get_inst_name(node)}}(self) ->  {%- if node.is_array -%}Tuple[{%- endif -%}{{get_fully_qualified_type_name(node)}}_cls{%- if node.is_array -%},...]{%- endif -%}:
-        return self.__{{get_inst_name(node)}}
+    def {{get_inst_name(child_node)}}(self) ->  {%- if child_node.is_array -%}Tuple[{%- endif -%}{{get_fully_qualified_type_name(child_node)}}_cls{%- if child_node.is_array -%},...]{%- endif -%}:
+        return self.__{{get_inst_name(child_node)}}
             {%- endif %}
         {% endfor %}
 {%- endmacro %}
